style/styles.css
/* ... */
.content {
  margin-top: 3rem;

}

.user-personas {
  display: grid;
  grid-template-columns: 1fr;
  padding-bottom: 5rem;
  margin-top: 3rem;
}

.user {
  display: grid;
  grid-column: 1 / -1;
  padding-bottom: 5rem;
  justify-self: center;
}

.user_two {
  display: grid;
  grid-column: 1 / -1;
  padding-bottom: 5rem;
  justify-self: center;
}

.user_three {
  display: grid;
  grid-column: 1 / -1;
  padding-bottom: 5rem;
  justify-self: center;
}

.user_three .bold-purple, .user_four .bold-purple {
  margin-top: 0;
}

.user_four {
  display: grid;
  grid-column: 1 / -1;
  padding-bottom: 5rem;
  justify-self: center;
}

.user-name {
  font-weight: 800;
  padding-top: 2rem;
  margin: 0;
  text-align: center;
  color: #6A5487;
}

.user_img, .user-type {
  text-align: center;
  margin: 0;
  padding-top: 1rem;
}

.user_img {
  justify-self: center;
}

.user-quote {
  text-align: left;
  font-size: 2rem;
  padding-top: 2rem;
  padding-bottom: 2rem;
}

.user-cat {
  justify-self: left;
  margin: 0;
  padding-top: 3rem;
  padding-bottom: 1rem;

}

.competitive-analysis a, .user-flows a, .branding a {
  justify-self: left;
}

.branding .style_examples a, .branding .style_examples_three {
  display: grid;
  grid-column: 1 / -1
}

.background a {
  display: grid;
  grid-column: 1 / -1;
  grid-template-columns: 1fr;
  justify-items: left;
}

.background_two a {
  display: grid;
  grid-column: 1 / -1;
  grid-template-columns: 1fr;
  justify-items: left;
}

.IA {
  display: grid;
  grid-template-columns: 1fr;
  grid-column-start: 2;
  justify-items: center;
  margin: 0;
}

.IA_intro {
  display: grid;
  grid-template-columns: 1fr;
  grid-column: 1 / -1;
  justify-items: left;
  width: 100%;
  text-align: left;
}

.IA_icon {
  padding-top: 5rem;
}

.front_end {
  display: grid;
  grid-template-columns: 1fr;
  grid-column: 1 / -1;
}

.screens_six {
  display: grid;
  grid-column: 1 / -1;
  justify-items: center;
}

.user-stories, .user-flows, .site-map, .wireframes, .branding, .mockups {
  display: grid;
  grid-column: 1 / -1;
  justify-items: left;
}

.user-flows, .site-map, .wireframes {
  padding-top: 3rem;
}

.user-stories p, .user-flows p, .site-map p, .wireframes p {
  padding-bottom: 3rem;
  text-align: left;
}

.user-flows p, .site-map p, .wireframes p, .branding p, .mockups p, .front_end p, .visual_design p {
  display: grid;
  padding-bottom: 3rem;
  padding-top: 3rem;
}

.visual_design .main {
  margin-top: 0;
  margin-bottom: 3rem;
}

.user-flows-img, .site-map-img {
  padding-bottom: 3rem;
  width: 90%;
}

.wireframes .sketches {
  width: 90%;
  max-width: 100rem;
}

.wireframes .screens_four {
  justify-items: center;
}


.STB_wireframe_collage {
  display: none;
}

.STB_mockup_collage {
  display: none;
}

.STB_front_end_collage {
  display: none;
}


.topp {
  padding-top: 3rem;
}


.key-takeaway p {
  padding: 0;
}

.wireframes .round-one {
  padding-top: 0;
  padding-bottom: 0;

}

.wireframes .screens_one img, .wireframes .screens_two img, .mockups .screens_three img, .preference_testing .screens_one img, .final_design .screens_one img, .wireframes .screens_four img, .visual_design .mockups .screens_five img, .front_end .screens_six img, .mockups .screens_one img, .mockups .screens_two img, .visual_design .screens_one img {
  width: 90%;
  max-width: 33.7rem;
}


.screens_one, .screens_two {
  justify-self: center;
  text-align: center;
  width: 100%;
}

.visual_design .insight {
  padding-top: 3rem;
  padding-bottom: 3rem;
}
.mockups .screens_eight img {
  width: 90%;
  max-width: 33.7rem;
  padding-top: 1.5rem;
  padding-bottom: 3rem;
}


.wireframes .screens_seven img {
  width: 90%;
  max-width: 33.7rem;
}

.wireframes_four {
  padding-top: 0;
}

.IA_intro .sunbelt_IA {
  padding-top: 4rem;
}

.visual_design {
  display: grid;
  grid-template-columns: 1fr;
  grid-column-start: 2;
  justify-items: center;
}

.smartequip_two {
  padding-top: 3rem;
}

.visual_design_intro {
  display: grid;
  grid-template-columns: 1fr;
  grid-column: 1 / -1;
  justify-self: left;
  text-align: left;
  margin-top: 2rem;
}

.reflections_intro {
  display: grid;
  grid-template-columns: 1fr;
  grid-column: 1 / -1;
  justify-items: left;
  width: 100%;
  margin-top: 2rem;
}

.frontend_intro {
  display: grid;
  grid-template-columns: 1fr;
  grid-column: 1 / -1;
  justify-items: center;
  background-image: url(../Images/frontend_intro.jpg);
  background-size: cover;
  background-repeat: no-repeat;
  width: 100%;
  margin-top: 2rem;
  margin-bottom: 5rem;
}

.front_end_icon {
  padding-top: 5rem;
}

.visual_design .branding p {
  text-align: left;
}
.logo_sketches {
  width: 90%;
}

.mind_mapping {
  width: 90%;
}

.branding, .preference_testing, .round_two, .final_design {
  text-align: left;
  width: 100%;
}

.preference_testing_four {
  padding-top: 3rem;
}


.preference_testing .summary {
  padding-top: 3rem;
  padding-bottom: 1.5rem;
}

.round_three {
  padding-top: 2rem;
}

.icons img, .typography img, .color_scheme img {
  width: 90%;
  max-width: 40rem;
  height: auto;
}

.typography img {
  max-height: 35rem;
}

.icons img {
  max-height: 35rem;
}

.round_two .list {
  padding-top: 3rem;
}

.refined_logo img, .refined_logo_two img {
  max-width: 30rem;
}

.refined_logo .logo_three {
  max-width: 40rem;
  width: 90%;
  height: auto;
}

.typography_two img, .color_scheme_two img {
  width: 90%;
  max-width: 35rem;
}

.style_examples, .style_examples_three {
  padding-top: 3rem;
}

.screens_six img {
  width: 90%;
}

.style_examples a, .final_design a, .style_examples_three a {
  display: grid;
  grid-column: 1 / -1;
  justify-items: left;
}

.end {
  margin-top: 3rem;
}

.dashboard_changes {
  width: 90%;
}

.mockups, .front_end {
  display: grid;
  grid-column: 1 / -1;
  justify-items: left;
  text-align: center;
}

.visual_design .mockups_four {
  padding-top: 0;
}
.mockups {
  padding-top: 3rem;
}

.mockups .key-takeaway {
  justify-self: left;
}
/* ... */

